--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,30 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 20px;
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	margin: 20px;
 }
 
 a.back-link {
-    float: right;
+	float: right;
 }
 
 #output-container {
-    padding: 10px;
-    border: solid 2px grey;
-    background-color: silver;
-    border-radius: 5px;
+	padding: 10px;
+	border: solid 2px grey;
+	background-color: silver;
+	border-radius: 5px;
 }
 
 #output-container:empty:before {
-    content: "Your output will appear here...";
+	content: "Your output will appear here...";
+}
+
+#output-container2 {
+	padding: 10px;
+	border: solid 2px grey;
+	background-color: silver;
+	border-radius: 5px;
+}
+
+#output-container2:empty:before {
+	content: "Your output will appear here...";
 }
